# ChangeLog for app-admin/pysdm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> Manifest:
  Recreate full Manifest

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Thin manifest, dropped no-herd from metatadata.xml

  29 Oct 2010; Justin Lecher <jlec@gentoo.org> metadata.xml:
  New addition

  29 Oct 2010; Justin Lecher <jlec@gentoo.org> +Manifest:
  New addition
