@@ -2,14 +2,14 @@
 Hash: SHA512
 
 DIST pysdm-0.4.1.tar.gz 114377 SHA256 0d92c781dfd9abab8b2ff037ef7fb7e41cb3b1439b3e984aadb3572d82173e32 SHA512 58aa2b5bfe99ee023c75fee5a61454cfa3eb4c433523f6fd603648d7fb60101358c3b6e0d91cceffab42bcf6d34ae9a1aa56354430afdf6c71b1baf6015bb67a WHIRLPOOL 7813fa70febd269cdad3891b69d2a925461d3804573fe6e04863a03b483b51b5a8b2b070268ca09e988e95072deb862937708e8e5c3b5745ec3d80b8282f4ee4
-EBUILD pysdm-0.4.1.ebuild 874 SHA256 ef1088fd6e5848779826f273034241dc32a263e2f7fdcf40765231df5c58dceb SHA512 5cc6f9ccee82de5200ba10f4dda9f9d8ac1d600d47b49cda0bbe4998b23acbbd2f881f4a9bdee68bb918490ab20f448ba32ef88b2f6bb882753dbb24fa89d927 WHIRLPOOL 0c9d3ce38a98654bb5ab4dcbecbe533e6c62c5cfb01e757a5360e011da04e03c54a275a99dfe5a50e936234eef19d22cde0bd668e7f52ef3341d1b8ccc8f8689
-MISC ChangeLog 465 SHA256 7de157490e393ffc52617a1b693823b3070b62d294900a263bc720ad6cf31e3b SHA512 47f6f5b9c6a9869a2832444ea6517660aa4095885185ffca7837ee98b62bfa14db6d46ff060e1c911b0da6497304376d888ff567746f421414a4607fade1f210 WHIRLPOOL 4f5d53a56099eed34df8cbd8f98952fbee844a466ab443bef7175db8b1dd5a39a9c4ea1b3b9362570d2776b94ab00b22adcf7060b9cdf2a19894586be49c6009
+EBUILD pysdm-0.4.1.ebuild 842 SHA256 cfef9d6d8c4fd040fd9c488d1bce7d356f0037239fd03a7a49d697a905795da0 SHA512 9b9373b2b3134ad4406baccf943b2bd00cf9f644462900f57c831ecc59e8f8b575f55b3c818438ba342c6e05ead40c952f66a5328c1070722328e5d97e2c0eb7 WHIRLPOOL 571b0cfee624f75e9825115e605040e00277982f29bfdd0e6b2d03e1d92be7d3de67f0df2eb3f9560037cf9e6d4876492056c48f73335572fc95cf1d0abe497d
+MISC ChangeLog 564 SHA256 19a36af0d569f435ea68fd5c215175edddc5a58c18f0f3ad732dc068a02b017b SHA512 b71cd7544563804f33ccbc0a82c9eccbd4316220b4f0350ce605cbdf4f3ac3dba122250ef97bc99e25e6c8e0f004e3d93acde9b136da2a6feea7ea7f59a260e5 WHIRLPOOL a1af20f521c281bd7d1a96b0f8620c8fe2dffce8958748bee912fa491702c36039109b4b1ab6ee06902a92d0ed99b4bf41ef0264518dab5bc27c4d8785607f42
 MISC metadata.xml 386 SHA256 28720ae160fe67277a6b8167b2b11f09ce10df22a366a699d730dd0d0a5f97ec SHA512 f6e3543764cc2411a95fa230fb88c4c59327afc9d1644ddcc23cb0890a6ed0830b36939e44e53bbff5c2097f3057713728712ce93bfbc1ff064aba4202ce9fb7 WHIRLPOOL d34c76cbfade583be8ac1bfdaaa6a8b41b45e9538b14d00935ae92e2d3d8f487689afcea7c9597fa87e7fe6ffeff77dd2c31507531e37984438447621c71bc54
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/J6jsACgkQgAnW8HDreRYckACfV1gyxN/KUNP2suxxL6FJ57Yp
-fokAnRxuT5hLbt5P7VmVThPFnoKl64Zt
-=Yck4
+iEYEAREKAAYFAk/J69QACgkQgAnW8HDreRYymgCdEWj5UD/TuhiF27D041jp2H7H
+O00AoJJ93u2b0HRDOQ+/ogCkmvXPdbQK
+=hMWq
 -----END PGP SIGNATURE-----
